package app.dtos;

public record GameDTO(PlayerNamesDTO players, QuestionDTO questions) {
}
