package app.dtos;

public record PlayerNameAndPoints(String name, int points) {
}
