package app.dtos;

import java.util.List;

public record QuestionDTO(List<QuestionBody> results) {}
